# ha-system-ronitor

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  config.example.toml  flake.nix  rust-toolchain.toml
docs/: windows-amd-private-temp-path.md  windows-drivers-rs-cpu-temp-attempt.md
examples/: mqtt_peek.rs  mqtt_publish.rs  os_version_probe.rs  windows_pawnio_temp_probe.rs
nix/: module.nix  package.nix
src/: lib.rs  main.rs  windows_service_host.rs
src/app/: mod.rs
src/config/: bootstrap.rs  env.rs  file.rs  mod.rs  paths.rs
src/device/: identity.rs  mod.rs  topics.rs
src/integrations/: mod.rs
src/integrations/home_assistant/: discovery.rs
src/integrations/mqtt/: mod.rs
src/shared/: util.rs
src/system/: collector.rs  gpu.rs  lighthouse.rs  mod.rs  models.rs  network.rs  pawnio.rs  power.rs  runtime.rs
