[package]
name = "ha-system-ronitor"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hex = "0.4"
hmac = "0.12"
nvml-wrapper = "0.12.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rumqttc = "0.25"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.38"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
toml = "1"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
libloading = "0.9"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }
windows-service = "0.8.0"
